<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >


     <Button 
        android:id="@+id/registerDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:onClick="onClick"
        android:textAllCaps="false"  
        />
    
    <RelativeLayout 
        android:id="@+id/llDeviceType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerDevice"
        >
        <Button 
        android:id="@+id/getDeviceType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getDeviceType"
        android:layout_alignParentLeft="true"
        android:textAllCaps="false"  
        android:onClick="onClick"
        />
        <Spinner 
            android:id="@+id/spType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/getDeviceType"
            android:layout_alignParentRight="true"
            android:layout_alignBottom="@id/getDeviceType"
            />
    </RelativeLayout>
    
     <RelativeLayout 
        android:id="@+id/llBrandByType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/llDeviceType"
        >
         <Button 
        android:id="@+id/getBrandByType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getBrandByType"
         android:textAllCaps="false"  
        android:layout_alignParentLeft="true"
        android:onClick="onClick"
        />
          <Spinner 
            android:id="@+id/spBrand"
            android:layout_toRightOf="@id/getBrandByType"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/getBrandByType"
            />
     </RelativeLayout>
   
    
  <RelativeLayout 
        android:id="@+id/llDataByBrand"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/llBrandByType"
        >
       <Button 
        android:id="@+id/getMatchedDataByBrand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getDataByBrand"
        android:textAllCaps="false"  
        android:layout_alignParentLeft="true"
        android:onClick="onClick"
        />
        <Spinner 
            android:id="@+id/spData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/getMatchedDataByBrand"
            android:layout_alignParentRight="true"
            android:layout_gravity="right"
            android:layout_alignBottom="@id/getMatchedDataByBrand"
            />
    </RelativeLayout>
    
       <Button 
        android:id="@+id/getDetailByRCID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getDetailByRCID"
        android:onClick="onClick"
        android:textAllCaps="false"  
        android:layout_below="@id/llDataByBrand"
        />
     <Button 
        android:id="@+id/getFastMatched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getFastMatched"
        android:textAllCaps="false"  
        android:onClick="onClick"
        android:layout_below="@id/getDetailByRCID"
        />
     
    <Button
        android:id="@+id/learnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learnUpload"
        android:textAllCaps="false"  
        android:onClick="onClick"
        android:layout_below="@id/getFastMatched"
        />
    
    <ScrollView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/learnUpload"
        >
       <TextView 
        android:id="@+id/showText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    </ScrollView>
</RelativeLayout>
